--- a/sentiment_exp3.ipynb
+++ b/sentiment_exp3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -53,45 +53,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from sentiment_sents import Sentiment\n",
+    "#from sentiment_sents import Sentiment\n",
     "\n",
     "# just load the sentences from the CNN system\n",
-    "sentiment = Sentiment(\"prevwork/CNN_sentence/\")"
+    "#sentiment = Sentiment(\"prevwork/CNN_sentence/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from stanfordSentimentReader import StanfordSentimentReader\n",
+    "\n",
+    "sentiment = StanfordSentimentReader('../stanfordSentimentTreebank')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2210, 8544, 1101)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#from stanfordSentimentReader import StanfordSentimentReader\n",
-    "\n",
-    "#sentiment = StanfordSentimentReader('/data/matthew/stanfordSentimentTreebank')"
+    "len(sentiment.test_X), len(sentiment.train_X), len(sentiment.dev_X)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#len(sentiment.test_X), len(sentiment.train_X), len(sentiment.dev_X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +113,7 @@
        "3000000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,16 +124,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# make the labels binary since that is what we are currently targetting in the training\n",
-    "#sentiment.train_Y = (np.array(sentiment.train_Y) > .6).astype('int32')\n",
-    "#sentiment.test_Y = (np.array(sentiment.test_Y) > .6).astype('int32')\n",
-    "#sentiment.dev_Y = (np.array(sentiment.dev_Y) > .6).astype('int32')"
+    "sentiment.train_Y = (np.array(sentiment.train_Y) > .6).astype('int32')\n",
+    "sentiment.test_Y = (np.array(sentiment.test_Y) > .6).astype('int32')\n",
+    "sentiment.dev_Y = (np.array(sentiment.dev_Y) > .6).astype('int32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2210, 8544, 1101)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sentiment.test_Y), len(sentiment.train_Y), len(sentiment.dev_Y)"
    ]
   },
   {
@@ -133,7 +166,12 @@
    },
    "outputs": [],
    "source": [
-    "#len(sentiment.test_Y), len(sentiment.train_Y), len(sentiment.dev_Y)"
+    "for w in sentiment.test_X:\n",
+    "    wordvectors.tokenize(w)\n",
+    "for w in sentiment.train_X:\n",
+    "    wordvectors.tokenize(w)\n",
+    "for w in sentiment.dev_X:\n",
+    "    wordvectors.tokenize(w)"
    ]
   },
   {
@@ -142,14 +180,20 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3003779"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for w in sentiment.test_X:\n",
-    "    wordvectors.tokenize(w)\n",
-    "for w in sentiment.train_X:\n",
-    "    wordvectors.tokenize(w)\n",
-    "#for w in sentiment.dev_X:\n",
-    "#    wordvectors.tokenize(w)"
+    "len(wordvectors.vectors)"
    ]
   },
   {
@@ -162,7 +206,7 @@
     {
      "data": {
       "text/plain": [
-       "21418"
+       "19537"
       ]
      },
      "execution_count": 12,
@@ -176,11 +220,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/lasagne/init.py:86: UserWarning: The uniform initializer no longer uses Glorot et al.'s approach to determine the bounds, but defaults to the range (-0.01, 0.01) instead. Please use the new GlorotUniform initializer to get the old behavior. GlorotUniform is now the default for all layers.\n",
+      "  warnings.warn(\"The uniform initializer no longer uses Glorot et al.'s \"\n",
+      "/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/lasagne/layers/helper.py:69: UserWarning: get_all_layers() has been changed to return layers in topological order. The former implementation is still available as get_all_layers_old(), but will be removed before the first release of Lasagne. To ignore this warning, use `warnings.filterwarnings('ignore', '.*topo.*')`.\n",
+      "  warnings.warn(\"get_all_layers() has been changed to return layers in \"\n"
+     ]
+    }
+   ],
    "source": [
     "class SentimentExp(object):\n",
     "    \n",
@@ -218,12 +273,12 @@
     "        self.embedding_l = EmbeddingLayer(\n",
     "            self.input_l,\n",
     "            W=self.wordvecs.get_numpy_matrix(),\n",
-    "            add_word_params=False,\n",
+    "            add_word_params=True,\n",
     "        ) \n",
     "        \n",
     "        self.first_l = lasagne.layers.Conv2DLayer(\n",
     "            self.embedding_l,\n",
-    "            num_filters=1,\n",
+    "            num_filters=100,\n",
     "            filter_size=(2, self.wordvecs.vector_size),\n",
     "            name='conv1',\n",
     "            nonlinearity=lasagne.nonlinearities.tanh,\n",
@@ -268,7 +323,7 @@
     "        \n",
     "        self.all_params = lasagne.layers.get_all_params(self.out_l)\n",
     "        \n",
-    "        self.updates = lasagne.updates.adagrad(self.loss_vec.mean(), self.all_params, .01)\n",
+    "        self.updates = lasagne.updates.adagrad(self.loss_vec.mean(), self.all_params, .005)\n",
     "        #self.updates = lasagne.updates.apply_momentum(self.updates_adagrad)\n",
     "        \n",
     "        self.train_func = theano.function(\n",
@@ -315,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -323,10 +378,10 @@
     {
      "data": {
       "text/plain": [
-       "[conv1.W, conv1.b, dens1.W, dens1.b, dens2.W, dens2.b]"
+       "[Embeddings, conv1.W, conv1.b, dens1.W, dens1.b, dens2.W, dens2.b]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +401,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 (1.8178072587124694, 0.50070339976553346) "
+      "0 (1.0651142552819939, 0.22975187265917604) "
      ]
     }
    ],
@@ -414,55 +469,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ -6.04371018e-03,   1.78176286e-02,   1.09569314e-02,\n",
-       "         1.67699890e-02,   1.99813069e-02,   1.18091645e-03,\n",
-       "        -7.71580864e-03,  -7.66937027e-03,   2.58295118e-03,\n",
-       "         1.91439796e-02,  -4.52293052e-03,   9.89952002e-03,\n",
-       "         1.27791829e-02,   1.08079915e-02,  -6.18459987e-03,\n",
-       "         8.54377781e-03,   1.81448576e-03,  -1.12456523e-02,\n",
-       "        -1.39540722e-02,  -9.03013292e-03,  -1.47806321e-02,\n",
-       "         1.93713232e-02,   2.06622801e-03,  -1.36212534e-02,\n",
-       "         1.20468446e-02,  -9.08213372e-03,   1.39999114e-02,\n",
-       "         1.24535194e-02,   1.33896294e-02,   1.07211256e-02,\n",
-       "         9.71938456e-03,   6.09554924e-03,  -7.61628915e-03,\n",
-       "        -5.02340545e-03,   1.07865300e-02,  -1.67957726e-02,\n",
-       "        -1.98590815e-02,   7.27865640e-03,  -1.21863609e-02,\n",
-       "        -1.78227560e-02,   1.00208855e-02,  -1.13455128e-02,\n",
-       "         8.78016649e-03,  -5.12723489e-03,  -2.32765902e-03,\n",
-       "        -1.07733866e-02,  -1.86382091e-03,  -6.29751929e-03,\n",
-       "         9.08809137e-03,  -8.07984720e-03,  -4.00916452e-04,\n",
-       "         7.08928438e-03,  -7.69629014e-03,  -1.85716980e-02,\n",
-       "        -2.45975028e-04,   1.96091932e-02,   9.85299404e-03,\n",
-       "        -6.47411882e-03,  -6.92369304e-03,   9.76902081e-03,\n",
-       "        -5.38756025e-03,   1.49186512e-05,  -9.90391176e-03,\n",
-       "        -5.06956376e-03,  -7.02526187e-03,  -1.77645708e-02,\n",
-       "        -1.36325835e-02,  -9.46247194e-03,  -3.28425771e-03,\n",
-       "        -8.22870184e-03,   1.02040076e-02,   1.65907100e-02,\n",
-       "         1.13615254e-02,   1.97168132e-02,  -6.64456555e-03,\n",
-       "        -3.50381809e-03,   1.92203476e-02,   7.95428235e-03,\n",
-       "        -8.39278939e-03,  -8.48983664e-03,  -5.68052293e-03,\n",
-       "        -1.11607240e-02,  -1.27568178e-02,  -1.01842724e-02,\n",
-       "        -9.19986224e-03,  -7.51357814e-03,  -7.46410022e-03,\n",
-       "        -1.75093589e-02,  -1.18594716e-02,  -7.59622478e-03,\n",
-       "         1.36190814e-02,   8.12941628e-03,   4.45606466e-03,\n",
-       "        -1.82420440e-02,  -4.24149811e-03,   1.13999264e-02,\n",
-       "        -4.46258875e-03,   1.61339162e-02,   7.27347886e-05,\n",
-       "        -5.91553441e-03])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "experiment.first_l.b.get_value(borrow=True)"
    ]
@@ -480,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -498,29 +509,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 7, 1)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_func2(np.array(experiment.train_X_rep[0:1]).astype('int32'))[2].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -538,185 +538,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array(2.215707863918104),\n",
-       " array([ 0.01005034,  0.01005034,  0.01005034,  0.01005034,  0.01005034,\n",
-       "         4.60517019,  4.60517019,  0.01005034,  4.60517019,  0.01005034,\n",
-       "         0.01005034,  4.60517019,  4.60517019,  4.60517019,  4.60517019,\n",
-       "         0.01005034,  0.01005034,  4.60517019,  0.01005034,  0.01005034,\n",
-       "         0.01005034,  0.01005034,  0.01005034,  0.01005034,  0.01005034,\n",
-       "         0.01005034,  4.60517019,  4.60517019,  4.60517019,  0.01005034,\n",
-       "         4.60517019,  4.60517019,  4.60517019,  0.01005034,  0.01005034,\n",
-       "         4.60517019,  0.01005034,  4.60517019,  0.01005034,  4.60517019,\n",
-       "         4.60517019,  4.60517019,  4.60517019,  0.01005034,  0.01005034,\n",
-       "         4.60517019,  4.60517019,  0.01005034,  4.60517019,  4.60517019]),\n",
-       " array([[-0.99999746],\n",
-       "        [-0.99999921],\n",
-       "        [-0.99999755],\n",
-       "        [-0.99999937],\n",
-       "        [-0.99997959],\n",
-       "        [-0.99998647],\n",
-       "        [-0.97755117],\n",
-       "        [-0.99999905],\n",
-       "        [-0.99999561],\n",
-       "        [-0.99999844],\n",
-       "        [-0.99912659],\n",
-       "        [-0.99999802],\n",
-       "        [-0.99999797],\n",
-       "        [-0.99988913],\n",
-       "        [-0.99999899],\n",
-       "        [-0.999999  ],\n",
-       "        [-0.99998743],\n",
-       "        [-0.99996683],\n",
-       "        [-0.99999943],\n",
-       "        [-0.99988239],\n",
-       "        [-0.99997378],\n",
-       "        [-0.99917202],\n",
-       "        [-0.99998483],\n",
-       "        [-0.99996435],\n",
-       "        [-0.9979141 ],\n",
-       "        [-0.99998799],\n",
-       "        [-0.99998674],\n",
-       "        [-0.99994197],\n",
-       "        [-0.9999427 ],\n",
-       "        [-0.9999808 ],\n",
-       "        [-0.99986852],\n",
-       "        [-0.99996618],\n",
-       "        [-0.99992266],\n",
-       "        [-0.99999223],\n",
-       "        [-0.99998941],\n",
-       "        [-0.99999507],\n",
-       "        [-0.99999662],\n",
-       "        [-0.99999975],\n",
-       "        [-0.99999789],\n",
-       "        [-0.99998893],\n",
-       "        [-0.99999064],\n",
-       "        [-0.99966005],\n",
-       "        [-0.9999991 ],\n",
-       "        [-0.99986705],\n",
-       "        [-0.9999933 ],\n",
-       "        [-0.99998589],\n",
-       "        [-0.99994566],\n",
-       "        [-0.99999606],\n",
-       "        [-0.99999834],\n",
-       "        [-0.99997598]]),\n",
-       " array([[ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.],\n",
-       "        [ 0.]]),\n",
-       " array([[-0.09517176],\n",
-       "        [ 0.09122868],\n",
-       "        [ 0.04958482],\n",
-       "        [-0.2722207 ],\n",
-       "        [ 0.15844815],\n",
-       "        [-0.2791488 ],\n",
-       "        [ 0.27688544],\n",
-       "        [ 0.0080624 ],\n",
-       "        [ 0.14515122],\n",
-       "        [-0.2697905 ],\n",
-       "        [ 0.13275644],\n",
-       "        [-0.05665108],\n",
-       "        [ 0.03938928],\n",
-       "        [-0.00914521],\n",
-       "        [ 0.01619262],\n",
-       "        [-0.11041953],\n",
-       "        [ 0.08923073],\n",
-       "        [ 0.27665931],\n",
-       "        [ 0.31533   ],\n",
-       "        [-0.20650812],\n",
-       "        [-0.03544311],\n",
-       "        [-0.21821938],\n",
-       "        [ 0.31089835],\n",
-       "        [-0.00451935],\n",
-       "        [ 0.00132952],\n",
-       "        [-0.08187321],\n",
-       "        [ 0.02525151],\n",
-       "        [ 0.33812171],\n",
-       "        [ 0.21949503],\n",
-       "        [-0.01348474],\n",
-       "        [-0.01643718],\n",
-       "        [-0.13279335],\n",
-       "        [-0.28495912],\n",
-       "        [-0.10006153],\n",
-       "        [-0.30880043],\n",
-       "        [ 0.08971634],\n",
-       "        [-0.21814049],\n",
-       "        [ 0.26520237],\n",
-       "        [-0.18113972],\n",
-       "        [-0.16493071],\n",
-       "        [-0.28384231],\n",
-       "        [ 0.09340289],\n",
-       "        [-0.09284696],\n",
-       "        [-0.05003833],\n",
-       "        [-0.05123566],\n",
-       "        [ 0.03310026],\n",
-       "        [-0.07319689],\n",
-       "        [-0.23177521],\n",
-       "        [ 0.11400645],\n",
-       "        [-0.22758939]]),\n",
-       " array([0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0,\n",
-       "        0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1,\n",
-       "        1, 0, 1, 1], dtype=int32)]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_func(np.array(experiment.train_X_rep[0:50]).astype('int32'),np.array(experiment.train_Y[0:50]).astype('int32'))"
    ]
