added vector training for the stanford dataset and it is working well now, thinking that training the vectors make since as there is a large fraction of unknown words

--- a/sentiment_exp3.ipynb
+++ b/sentiment_exp3.ipynb
@@ -18,15 +18,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Couldn't import dot_parser, loading of dot files will not be possible.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from theano import *\n",
     "from lasagne.layers import EmbeddingLayer, InputLayer, get_output\n",
@@ -48,7 +40,7 @@
    "source": [
     "from wordvecs import WordVectors, EmbeddingLayer\n",
     "\n",
-    "wordvectors = WordVectors(fname=\"../GoogleNews-vectors-negative300.bin\", negvectors=False)"
+    "wordvectors = WordVectors(fname=\"/data/matthew/GoogleNews-vectors-negative300.bin\", negvectors=False)"
    ]
   },
   {
@@ -75,7 +67,7 @@
    "source": [
     "from stanfordSentimentReader import StanfordSentimentReader\n",
     "\n",
-    "sentiment = StanfordSentimentReader('../stanfordSentimentTreebank')"
+    "sentiment = StanfordSentimentReader('/data/matthew/stanfordSentimentTreebank')"
    ]
   },
   {
@@ -401,12 +393,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 (1.0651142552819939, 0.22975187265917604) "
+      "0 (0.76398487129544468, 0.22975187265917604) "
      ]
     }
    ],
    "source": [
-    "for i in xrange(300):\n",
+    "for i in xrange(140):\n",
     "    if i % 15 == 0:\n",
     "        print i, experiment.test_loss(sentiment.train_X, sentiment.train_Y), experiment.test_loss(sentiment.test_X, sentiment.test_Y)\n",
     "    experiment.train()"
@@ -436,33 +428,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.011475340321080611, 0.00058520599250936332)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment.test_loss(sentiment.train_X, sentiment.train_Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.01160640751022117, 0.00090826521344232513)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment.test_loss(sentiment.dev_X, sentiment.dev_Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.011208333279435123, 0.0009049773755656109)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment.test_loss(sentiment.test_X, sentiment.test_Y)"
    ]
@@ -665,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
