--- a/sentiment_exp3.ipynb
+++ b/sentiment_exp3.ipynb
@@ -220,22 +220,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/lasagne/init.py:86: UserWarning: The uniform initializer no longer uses Glorot et al.'s approach to determine the bounds, but defaults to the range (-0.01, 0.01) instead. Please use the new GlorotUniform initializer to get the old behavior. GlorotUniform is now the default for all layers.\n",
-      "  warnings.warn(\"The uniform initializer no longer uses Glorot et al.'s \"\n",
-      "/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/lasagne/layers/helper.py:69: UserWarning: get_all_layers() has been changed to return layers in topological order. The former implementation is still available as get_all_layers_old(), but will be removed before the first release of Lasagne. To ignore this warning, use `warnings.filterwarnings('ignore', '.*topo.*')`.\n",
-      "  warnings.warn(\"get_all_layers() has been changed to return layers in \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class SentimentExp(object):\n",
     "    \n",
@@ -356,10 +345,10 @@
     "        wrong = 0.0\n",
     "        for s in xrange(0, len(test_X_rep), self.batch_size):\n",
     "            end = s + self.batch_size\n",
-    "            if end > len(self.train_X_rep):\n",
-    "                end = len(self.train_X_rep)\n",
-    "            X_vals = np.array(self.train_X_rep[s:end]).astype('int32')\n",
-    "            y_vals = np.array(self.train_Y[s:end]).astype('int32')\n",
+    "            if end > len(test_X_rep):\n",
+    "                end = len(test_X_rep)\n",
+    "            X_vals = np.array(test_X_rep[s:end]).astype('int32')\n",
+    "            y_vals = np.array(test_Y[s:end]).astype('int32')\n",
     "            loss, _, output_diff = self.loss_func(X_vals, y_vals)\n",
     "            wrong += output_diff\n",
     "            loss_sum += loss\n",
@@ -370,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -381,7 +370,7 @@
        "[Embeddings, conv1.W, conv1.b, dens1.W, dens1.b, dens2.W, dens2.b]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +381,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8544, 1101)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sentiment.train_X), len(sentiment.dev_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'No. .', \"What 's next ?\"}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(sentiment.train_X) & set(sentiment.test_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1101,)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment.dev_Y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -401,37 +456,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 (1.0651142552819939, 0.22975187265917604) "
+      "(1.051804325435719, 0.22975187265917604)\n",
+      "(1.0489524082941575, 0.22975187265917604)\n"
      ]
     }
    ],
    "source": [
-    "for i in xrange(300):\n",
+    "for i in xrange(2): \n",
+    "    print experiment.test_loss(sentiment.train_X, sentiment.train_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8544"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(experiment.train_X_rep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8544"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sentiment.train_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print experiment.test_loss(sentiment.train_X, sentiment.train_Y), experiment.test_loss(sentiment.dev_X, sentiment.dev_Y), experiment.test_loss(sentiment.test_X, sentiment.test_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in xrange(45):\n",
     "    if i % 15 == 0:\n",
-    "        print i, experiment.test_loss(sentiment.train_X, sentiment.train_Y), experiment.test_loss(sentiment.test_X, sentiment.test_Y)\n",
+    "        print i, experiment.test_loss(sentiment.train_X, sentiment.train_Y) #, experiment.test_loss(sentiment.dev_X, sentiment.dev_Y)\n",
     "    experiment.train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "experiment.train_X_rep[1,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "experiment.train_Y[1]"
    ]
   },
   {
