results are closer to what is expected

--- a/sentiment_exp3.ipynb
+++ b/sentiment_exp3.ipynb
@@ -18,7 +18,15 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Couldn't import dot_parser, loading of dot files will not be possible.\n"
+     ]
+    }
+   ],
    "source": [
     "from theano import *\n",
     "from lasagne.layers import EmbeddingLayer, InputLayer, get_output\n",
@@ -265,7 +273,7 @@
     "        self.embedding_l = EmbeddingLayer(\n",
     "            self.input_l,\n",
     "            W=self.wordvecs.get_numpy_matrix(),\n",
-    "            add_word_params=True,\n",
+    "            add_word_params=False,\n",
     "        ) \n",
     "        \n",
     "        self.first_l = lasagne.layers.Conv2DLayer(\n",
@@ -362,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -370,7 +378,7 @@
     {
      "data": {
       "text/plain": [
-       "[Embeddings, conv1.W, conv1.b, dens1.W, dens1.b, dens2.W, dens2.b]"
+       "[conv1.W, conv1.b, dens1.W, dens1.b, dens2.W, dens2.b]"
       ]
      },
      "execution_count": 14,
@@ -393,14 +401,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 (0.76398487129544468, 0.22975187265917604) "
+      "(0.93582451408386969, 0.22975187265917604) (1.1171855369480448, 0.27520435967302453) (0.97624973693071981, 0.24253393665158371)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print experiment.test_loss(sentiment.train_X, sentiment.train_Y), experiment.test_loss(sentiment.dev_X, sentiment.dev_Y), experiment.test_loss(sentiment.test_X, sentiment.test_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 (0.94509708226262634, 0.22975187265917604) "
      ]
     }
    ],
    "source": [
     "for i in xrange(140):\n",
     "    if i % 15 == 0:\n",
-    "        print i, experiment.test_loss(sentiment.train_X, sentiment.train_Y), experiment.test_loss(sentiment.test_X, sentiment.test_Y)\n",
+    "        print i, experiment.test_loss(sentiment.train_X, sentiment.train_Y), experiment.test_loss(sentiment.dev_X, sentiment.dev_Y)\n",
     "    experiment.train()"
    ]
   },
@@ -412,7 +439,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment.train_X_rep[1,:]"
+    "experiment.test_loss(sentiment.train_X, sentiment.train_Y)"
    ]
   },
   {
@@ -423,71 +450,16 @@
    },
    "outputs": [],
    "source": [
-    "experiment.train_Y[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.011475340321080611, 0.00058520599250936332)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "experiment.test_loss(sentiment.train_X, sentiment.train_Y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.01160640751022117, 0.00090826521344232513)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "experiment.test_loss(sentiment.dev_X, sentiment.dev_Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.011208333279435123, 0.0009049773755656109)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "experiment.test_loss(sentiment.test_X, sentiment.test_Y)"
    ]
@@ -690,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
