--- a/sentiment_exp2.ipynb
+++ b/sentiment_exp2.ipynb
@@ -18,7 +18,15 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Couldn't import dot_parser, loading of dot files will not be possible.\n"
+     ]
+    }
+   ],
    "source": [
     "from theano import *\n",
     "from lasagne.layers import EmbeddingLayer, InputLayer, get_output\n",
@@ -26,7 +34,8 @@
     "import lasagne.layers\n",
     "import theano.tensor as T\n",
     "import theano\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from helpers import SimpleMaxingLayer"
    ]
   },
   {
@@ -202,9 +211,14 @@
     "            nonlinearity=lasagne.nonlinearities.tanh,\n",
     "        )\n",
     "        \n",
-    "        self.first_l_max = lasagne.layers.MaxPool2DLayer(\n",
+    "        #self.first_l_max_old = lasagne.layers.MaxPool2DLayer(\n",
+    "        #    self.first_l,\n",
+    "        #    pool_size=(1,9)\n",
+    "        #)\n",
+    "        \n",
+    "        self.first_l_max = SimpleMaxingLayer(\n",
     "            self.first_l,\n",
-    "            pool_size=(1,9)\n",
+    "            name='maxing1',\n",
     "        )\n",
     "        \n",
     "        self.hidden1_l = lasagne.layers.DenseLayer(\n",
@@ -265,10 +279,10 @@
     "        wrong = 0.0\n",
     "        for s in xrange(0, len(test_X_rep), self.batch_size):\n",
     "            end = s + self.batch_size\n",
-    "            if end > len(self.train_X_rep):\n",
-    "                end = len(self.train_X_rep)\n",
-    "            X_vals = np.array(self.train_X_rep[s:end]).astype('int32')\n",
-    "            y_vals = np.array(self.train_Y[s:end]).astype('int32')\n",
+    "            if end > len(test_X_rep):\n",
+    "                end = len(test_X_rep)\n",
+    "            X_vals = np.array(test_X_rep[s:end]).astype('int32')\n",
+    "            y_vals = np.array(test_Y[s:end]).astype('int32')\n",
     "            loss, _, output_diff = self.loss_func(X_vals, y_vals)\n",
     "            wrong += output_diff\n",
     "            loss_sum += loss\n",
@@ -279,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -310,12 +324,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 (2.1327410298684679, 0.49777256740914422) "
+      "0 (0.041405759651163429, 0.0058616647127784291) "
      ]
     }
    ],
    "source": [
-    "for i in xrange(300):\n",
+    "for i in xrange(100):\n",
     "    if i % 15 == 0:\n",
     "        print i, experiment.test_loss(sentiment.train_X, sentiment.train_Y), experiment.test_loss(sentiment.test_X, sentiment.test_Y)\n",
     "    experiment.train()"
@@ -323,29 +337,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.04152688357425173, 0.0058616647127784291)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment.test_loss(sentiment.train_X, sentiment.train_Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.70493606972403267, 0.23545966228893059)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment.test_loss(sentiment.test_X, sentiment.test_Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3005569"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(wordvectors.vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21418"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(wordvectors.word_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -363,22 +443,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(2.307610260920796),\n",
+       " array([ 4.60517019,  0.01005034,  0.01005034,  0.01005034,  4.60517019,\n",
+       "         4.60517019,  0.01005034,  4.60517019,  0.01005034,  4.60517019]),\n",
+       " array([[-0.99970189],\n",
+       "        [-0.99984285],\n",
+       "        [-0.99994332],\n",
+       "        [-0.99999965],\n",
+       "        [-0.9999643 ],\n",
+       "        [-0.9999204 ],\n",
+       "        [-0.99999845],\n",
+       "        [-0.99999421],\n",
+       "        [-0.99999759],\n",
+       "        [-0.99999373]]),\n",
+       " array([[ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.],\n",
+       "        [ 0.]]),\n",
+       " array([[ 0.27494431],\n",
+       "        [ 0.09649501],\n",
+       "        [-0.08571805],\n",
+       "        [-0.32281064],\n",
+       "        [ 0.03853347],\n",
+       "        [ 0.20895831],\n",
+       "        [ 0.08100506],\n",
+       "        [ 0.17365957],\n",
+       "        [-0.23046395],\n",
+       "        [ 0.05663455],\n",
+       "        [-0.03202666],\n",
+       "        [ 0.14545709],\n",
+       "        [ 0.19241292],\n",
+       "        [-0.01628205],\n",
+       "        [-0.06529974],\n",
+       "        [ 0.14967342],\n",
+       "        [-0.27021078],\n",
+       "        [ 0.16611127],\n",
+       "        [-0.11415864],\n",
+       "        [-0.26834983],\n",
+       "        [-0.01755384],\n",
+       "        [-0.18099278],\n",
+       "        [ 0.09494014],\n",
+       "        [-0.06814307],\n",
+       "        [ 0.10414515],\n",
+       "        [-0.3286643 ],\n",
+       "        [-0.2212776 ],\n",
+       "        [ 0.00071354],\n",
+       "        [ 0.11420864],\n",
+       "        [-0.006733  ],\n",
+       "        [ 0.08689794],\n",
+       "        [-0.16262229],\n",
+       "        [ 0.14224455],\n",
+       "        [ 0.09990975],\n",
+       "        [ 0.17448144],\n",
+       "        [ 0.15057007],\n",
+       "        [ 0.29475537],\n",
+       "        [-0.21966852],\n",
+       "        [ 0.19515319],\n",
+       "        [-0.26681716],\n",
+       "        [-0.1445572 ],\n",
+       "        [ 0.15553236],\n",
+       "        [-0.00991897],\n",
+       "        [ 0.17985547],\n",
+       "        [ 0.33061511],\n",
+       "        [ 0.29934494],\n",
+       "        [-0.00724243],\n",
+       "        [-0.25160486],\n",
+       "        [-0.08563679],\n",
+       "        [ 0.27626708]]),\n",
+       " array([1, 0, 0, 0, 1, 1, 0, 1, 0, 1], dtype=int32)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_func(np.array(experiment.train_X_rep[0:10]).astype('int32'),np.array(experiment.train_Y[0:10]).astype('int32'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "range() integer end argument expected, got TensorVariable.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-8b1e23fc6408>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mgg_i\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mT\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miscalar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'x'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mgg_res\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgg_update\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtheano\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscan\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mgg_k\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgg_k\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msequences\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgg_i\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: range() integer end argument expected, got TensorVariable."
+     ]
+    }
+   ],
    "source": [
     "gg_k = theano.shared(0.)\n",
     "gg_i = T.iscalar('x')\n",
